--- a/Lieblingsschmerz.html
+++ b/Lieblingsschmerz.html
@@ -775,9 +775,10 @@ Donyam az “donya” tabdil shode be to (Roya) 💫🩵.`;
   
   {text:"Du bist das Kapitel, das ich niemals beenden möchte. ❤️📖", author:""},
   {text:"Du bist illegal hübsch, ich glaube, du solltest bestraft werden. 😏🔥", author:""},
-  {text:"Manchmal setze ich mich ernst hin und frage mich, warum ich dich so sehr liebe, dann fallen mir deine Lacher ein und ich denke, egal, lieb sie einfach weiter. 😊💭", author:""},
+  {text:"Manchmal setze ich mich ernst hin und frage mich, warum ich dich so sehr liebe, dann fallen mir deine Lacher ein und ich denke, egal، lieb sie einfach weiter. 😊💭", author:""},
 
   {text:"Jeden Morgen, wenn ich aufwache, bist du mein erster Gedanke. 🌅💘", author:""},
+  {text:"Du überbrückst die Entfernung nicht، aber mit dem Gedanken an dich wird sogar diese Distanz süß. 🌍💌", author:""},
   {text:"Du bist diejenige, die ich am liebsten auf Only Me sperren würde. 🔒❤️", author:""},
   {text:"Ich bin nicht nur in dich verliebt, ich bin auch stolz auf dich, darauf wer du bist, wie du denkst und wie viel Herz du hast. 🥹🌹", author:""},
   {text:"Weißt du, was das Problem ist, mein Herz ist total kindisch, es ist schnell beleidigt, aber noch schneller vermisst es dich. 🧸🥺", author:""},
@@ -796,8 +797,8 @@ Donyam az “donya” tabdil shode be to (Roya) 💫🩵.`;
   {text:"Wenn die Welt für einen Moment still wird, wird sie durch dein Lachen wieder hell für mich. 🌎😄", author:""},
   {text:"Die Ferne von dir ist wie ein unvollendetes Gedicht, jede Zeile erinnert an dich. 📜🥺", author:""},
   {text:"Ich wünschte, ich könnte dein Lachen aufnehmen und jedes Mal abspielen, wenn es mir schlecht geht. 🎧😊", author:""},
-  {text:"Wenn du dich nur einen Moment lang durch meine Augen sehen würdest, würdest du merken, wie schön, stark und wertvoll du bist, viel mehr als du glaubst. 👁️💫", author:""},
-  {text:"Du bist so süß, dass ich jeden Tag nachschauen möchte, ob du immer noch mir gehörst. 🍯😍", author:""},
+  {text:"Wenn du dich nur einen Moment lang durch meine Augen sehen würdest, würdest du merken, wie schön، stark und wertvoll du bist, viel mehr als du glaubst. 👁️💫", author:""},
+  {text:"Du bist so süß، dass ich jeden Tag nachschauen möchte, ob du immer noch mir gehörst. 🍯😍", author:""},
 
   {text:"Du bist nicht einfach nur ein Mensch, du bist ein Gefühl, etwas ganz Besonderes. 💞✨", author:""},
   {text:"Die Entfernung von dir ist das Einzige, das mich daran erinnert, wie wertvoll deine Anwesenheit für mich ist. 📏💔", author:""},
@@ -808,11 +809,11 @@ Donyam az “donya” tabdil shode be to (Roya) 💫🩵.`;
   {text:"Die ganze Welt auf einer Seite, dein Lächeln auf der anderen und ich bin immer auf der Seite deines Lächelns. 🌍😊", author:""},
   {text:"Die Entfernung von dir schmeckt bitter, aber die Erinnerung an dich macht sie süß. 🍫😔", author:""},
   {text:"Wenn Sehnsucht ein Beruf wäre, wäre ich der Geschäftsführer der Firma Denken an dich. 💼💭", author:""},
-  {text:"Selbst wenn du so weit weg bist, scheint es, als wären all deine Erinnerungen bei mir und würden mit mir sprechen. 🖼️🕊️", author:""},
+  {text:"Selbst wenn du so weit weg bist, scheint es، als wären all deine Erinnerungen bei mir und würden mit mir sprechen. 🖼️🕊️", author:""},
   {text:"Du bist diejenige, die ich manchmal am liebsten erwürgen würde und dann direkt wieder in den Arm nehmen und nie mehr loslassen möchte. 😤🤍", author:""},
 
   {text:"Du bist mein Für immer, auch wenn sich die Jahreszeiten ändern, bleibst du fest in meinem Herzen. 🍂💍", author:""},
-  {text:"Ich vermisse deine Stimme, deinen Blick und sogar dein Schweigen. 🎧🥺", author:""},
+  {text:"Ich vermisse deine Stimme، deinen Blick und sogar dein Schweigen. 🎧🥺", author:""},
   {text:"Sei bitte ein kleines bisschen weniger attraktiv, ich kann mich sonst nicht konzentrieren und meine Gedanken wandern ständig zu dir. 🙈🔥", author:""},
   {text:"Du bist die Person, an die ich unbewusst denke, vor jeder Handlung, vor jeder Entscheidung, vor jedem Lächeln. 🤍🧠", author:""},
   {text:"Entfernungen trennen nur die Körper, nicht die Herzen, mein Herz ist immer bei dir. 💌❤️", author:""},
@@ -821,7 +822,7 @@ Donyam az “donya” tabdil shode be to (Roya) 💫🩵.`;
   {text:"Die Entfernung von dir bedeutet, in der Sehnsucht nach dem Moment zu leben, in dem ich dich wiedersehe. 🕰️🥺", author:""},
   {text:"Man hätte dich mit einem Etikett mit der Aufschrift Gefahr starker Sucht ausliefern müssen, ich werde von dir garantiert nie wieder clean. ⚠️💘", author:""},
   {text:"Wenn ich an dich denke, vermisse ich dich nicht nur, ich spüre auch einen tiefen Respekt, weil ich weiß, wie viel du schon ganz alleine getragen hast. 🫶💐", author:""},
-  {text:"Ich habe mein Herz gefragt, wen es liebt, und es hat gesagt, nur die eine, die das hier gerade liest. ❤️👀", author:""},
+  {text:"Ich habe mein Herz gefragt, wen es liebt, und es hat gesagt, nur die eine، die das hier gerade liest. ❤️👀", author:""},
 
   {text:"Wenn mich eines Tages die ganze Welt vergisst, reicht es mir, dass du dich an mich erinnerst. 🌎🤍", author:""},
   {text:"Meine Liebe zu dir ist wie der Regen, unaufhörlich und endlos. 🌧️💙", author:""},
@@ -833,54 +834,50 @@ Donyam az “donya” tabdil shode be to (Roya) 💫🩵.`;
   {text:"Mit dir zu sein bedeutet, jeden Tag in einem Traum zu leben. 💭💘", author:""},
   {text:"Ich bin eigentlich schüchtern, aber mein Herz schämt sich bei dir überhaupt nicht und rennt direkt auf dich zu. 🏃‍♂️❤️", author:""},
   {text:"Roya, du bist wie eine Brise, die meine Seele selbst dann sanft berührt, wenn du nicht da bist. 🌬️💓", author:""},
-  {text:"Ich liebe dich, nicht wie die anderen, sondern wie den ersten Herzschlag, der merkt, dass er nur lebt, weil es dich gibt. 🫀✨", author:""},
+  {text:"Ich liebe dich، nicht wie die anderen, sondern wie den ersten Herzschlag, der merkt, dass er nur lebt, weil es dich gibt. 🫀✨", author:""},
 
   {text:"Du bist wie ein süßes Geheimnis in meinem Leben, das niemand außer mir fühlen kann. 🤫💗", author:""},
-  {text:"Jeder Moment ohne dich, es sind deine Erinnerungen, die mich am Leben halten. 🕰️🖼️", author:""},
-  {text:"Wenn ich nur eine Minute von dir weg bin, fühlt es sich an, als hätte die ganze Welt kein Internet mehr. 🌐😵", author:""},
+  {text:"Jeder Moment ohne dich، es sind deine Erinnerungen، die mich am Leben halten. 🕰️🖼️", author:""},
+  {text:"Wenn ich nur eine Minute von dir weg bin, fühlt es sich an، als hätte die ganze Welt kein Internet mehr. 🌐😵", author:""},
   {text:"Manchmal wünsche ich mir, dich einfach festzuhalten und die Zeit anzuhalten. ⏱️🤍", author:""},
   {text:"Mein Lieblingsort ist da, wo dein Lachen in der Luft hängt. 😂💫", author:""},
 
   {text:"Mit dir zu sein bedeutet, das Leben mit all seinen Farben und Klängen zu erleben. 🎨🎶", author:""},
-  {text:"Ich vermisse dich so sehr, dass selbst die Sterne traurig wirken. ⭐😢", author:""},
-  {text:"Du bist wie mein Morgenkaffee, selbst wenn du bitter wärst, ohne dich könnte mein Tag gar nicht beginnen. ☕❤️", author:""},
+  {text:"Ich vermisse dich so sehr، dass selbst die Sterne traurig wirken. ⭐😢", author:""},
+  {text:"Du bist wie mein Morgenkaffee، selbst wenn du bitter wärst، ohne dich könnte mein Tag gar nicht beginnen. ☕❤️", author:""},
   {text:"Mit dir schenkt mir sogar ein kurzer Blick tausend verliebte Gefühle. 👀💘", author:""},
-  {text:"Wenn du mich anschaust, vergesse ich, was ich sagen wollte, aber mein Herz redet weiter. 🙈💓", author:""},
+  {text:"Wenn du mich anschaust، vergesse ich, was ich sagen wollte, aber mein Herz redet weiter. 🙈💓", author:""},
 
   {text:"Du bist derjenige, der mit einer einzigen Nachricht all meine Traurigkeit verschwinden lassen kann. 📩😊", author:""},
   {text:"Mit dir ist sogar ein einziger Moment der Trennung die längste Sekunde überhaupt. ⏳💔", author:""},
-  {text:"Roya, du bist wie starkes WLAN, wenn du nicht da bist, fühlt sich die ganze Welt langsam und langweilig an. 📶🥲", author:""},
+  {text:"Roya، du bist wie starkes WLAN، wenn du nicht da bist، fühlt sich die ganze Welt langsam und langweilig an. 📶🥲", author:""},
   {text:"Du bist wie ein geheimnisvolles Buch, jede Seite von dir trägt ein neues Gefühl in sich. 📚💞", author:""},
   {text:"Dein Name ist der schönste Gedanke, den ich zwischen zwei Atemzügen haben kann. 💭💖", author:""},
 
   {text:"Manchmal denke ich, mein Herz ist mehr von dir abhängig als vom Internet, es muss immer mit dir verbunden sein. ❤️📶", author:""},
   {text:"Die Entfernung von dir ist wie eine Nacht ohne Mond, dunkel, kalt und endlos. 🌌🥺", author:""},
   {text:"Du bist diejenige, wegen der ich den halben Tag nachdenke und die andere Hälfte lache. 😄💘", author:""},
-  {text:"Mit dir zusammen zu sein bedeutet, dass sogar Eifersucht süß ist, weil sie ein Zeichen von Zuneigung ist. 😏💚", author:""},
+  {text:"Mit dir zusammen zu sein bedeutet، dass sogar Eifersucht süß ist, weil sie ein Zeichen von Zuneigung ist. 😏💚", author:""},
   {text:"Wenn mein Herz eine Playlist hätte, würdest du in jedem Song vorkommen. 🎧🎵", author:""},
 
   {text:"Mit dir zu sein bedeutet, dass ich selbst dann, wenn ich wütend bin, dich einfach nur umarmen möchte. 😤🤍", author:""},
-  {text:"Du überbrückst die Entfernung nicht, aber mit dem Gedanken an dich wird sogar diese Distanz süß. ✈️💌", author:""},
   {text:"Wenn Glück ein Gesicht hätte, würde es deinen Augen sehr ähnlich sehen. 😊👀", author:""},
-  {text:"Seit du da bist, weiß ich, dass Schmetterlinge im Bauch kein Mythos sind. 🦋💞", author:""},
+  {text:"Seit du da bist، weiß ich، dass Schmetterlinge im Bauch kein Mythos sind. 🦋💞", author:""},
 
   {text:"Du bist wie ein romantischer Film, von dem man nie müde wird, ihn wieder und wieder anzuschauen. 🎥💖", author:""},
   {text:"Manchmal habe ich das Gefühl, dass die Kilometer zwischen uns lauter sind als jedes Wort, das ich dir schicken kann. 📏💬", author:""},
-  {text:"Ich wünschte, ich könnte dein Lachen aufnehmen und jedes Mal abspielen, wenn es mir schlecht geht. 🎙️😊", author:""},
   {text:"Unsere Chats sind voll von Wörtern, aber mein Herz ist voll von Umarmungen, die ich dir nicht geben kann. 📲🤍", author:""},
   {text:"Ich tue so, als wäre alles okay, aber meine Gedanken laufen jede Nacht in deine Richtung. 🌙🧠", author:""},
 
   {text:"Du bist genau diejenige, die mein Gehirn durcheinander bringt und mein Herz schneller schlagen lässt. 🤯💓", author:""},
-  {text:"Die Entfernung von dir ist das Einzige, das mich daran erinnert, wie wertvoll deine Anwesenheit für mich ist. 📍💔", author:""},
   {text:"Manchmal wünsche ich mir, du würdest mir eine kleine Schachtel voller deiner Lacher machen. 🎁😂", author:""},
   {text:"Wenn andere von Plänen fürs Wochenende reden, denke ich nur daran, wie schön es wäre, dich einfach kurz sehen zu können. 📆🤍", author:""},
   {text:"Ich vermisse nicht nur dich, ich vermisse auch die Version von mir, die nur neben dir existiert. 🪞🥺", author:""},
 
   {text:"Mein Herz findet bei niemandem Ruhe, nur der Gedanke an dich ist wie ein Wiegenlied für meine Seele. 💤💗", author:""},
-  {text:"Manchmal möchte ich für dich Gedichte sagen, auch wenn die Reime falsch sind. ✍️😊", author:""},
-  {text:"Jede Uhr zeigt die gleiche Zeit an, aber ohne dich vergeht sie für mich anders. ⏰😔", author:""},
+  {text:"Manchmal möchte ich für dich Gedichte sagen، auch wenn die Reime falsch sind. ✍️😊", author:""},
+  {text:"Jede Uhr zeigt die gleiche Zeit an، aber ohne dich vergeht sie für mich anders. ⏰😔", author:""},
   {text:"Ich weiß, dass wir uns wiedersehen, aber manchmal ist das Wissen allein zu wenig gegen die Leere neben mir. 🤍🕳️", author:""}
-
   ];
   let idx = 0, autoTimer = null;
   const AUTOPLAY_INTERVAL = 6000;
