--- a/Lieblingsschmerz.html
+++ b/Lieblingsschmerz.html
@@ -475,7 +475,7 @@
         <div class="divider" aria-hidden="true"></div>
 
         <button class="btn ps-toggle" id="psToggle" aria-expanded="false">Noch eins:</button>
-        <div class="ps" id="psText">Manchmal reichen Wörter nicht aber dieser Brief versucht es trotzdem. 💗</div>
+        <div class="ps" id="psText">Manchmal reichen Wörter nicht, aber dieser Brief versucht es trotzdem. 💗</div>
 
         <!-- Divider #2 -->
         <div class="divider" aria-hidden="true"></div>
@@ -970,3 +970,4 @@ Donyam az “donya” tabdil shode be to (Roya) 💫🩵.`;
 </script>
 </body>
 </html>
+
